feat: Track pptx and onepkg files with LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.pptx filter=lfs diff=lfs merge=lfs -text
+*.onepkg filter=lfs diff=lfs merge=lfs -text
